--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "client": "cd client && npm start",
     "server": "node server/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "cd client && npm run build",
-    "start": "NODE_ENV=production node server/server.js",
+    "build": "cd client && npm install && npm run build",
+    "start": "node server/server.js",
     "install-all": "npm install && cd client && npm install"
   },
   "dependencies": {
