--- a/vercel.json
+++ b/vercel.json
@@ -2,13 +2,6 @@
   "version": 2,
   "builds": [
     {
-      "src": "client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "build"
-      }
-    },
-    {
       "src": "server/index.js",
       "use": "@vercel/node"
     }
@@ -20,9 +13,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/client/build/$1"
+      "dest": "/client/build/index.html"
     }
-  ],
-  "installCommand": "cd client && npm install",
-  "buildCommand": "cd client && npm run build"
+  ]
 }
