--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
+  "functions": {
+    "api/quotes.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
     { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
