--- a/vercel.json
+++ b/vercel.json
@@ -4,29 +4,20 @@
   "installCommand": "npm install",
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
       "source": "/static/(.*)",
       "headers": [
         {
-          "key": "Cache-Control", 
-          "value": "public, max-age=31536000, immutable"
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000"
         }
       ]
     },
     {
-      "source": "/(.*\\.(jpg|jpeg|png|gif|ico|svg|webp))",
+      "source": "/(.*\\.(png|jpg|jpeg|gif|ico|svg|webp))",
       "headers": [
         {
           "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
+          "value": "public, max-age=31536000"
         }
       ]
     }
