--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/build",
-  "installCommand": "npm install",
+  "installCommand": "echo 'Skipping root install'",
   "headers": [
     {
       "source": "/static/(.*)",
