Simplify Vercel config to basic static build

--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,18 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/build",
-  "installCommand": "echo 'Skipping root install'",
-  "headers": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/static/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2))",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "public, max-age=31536000, immutable"
-        }
-      ]
+      "src": "client/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
-  "images": {
-    "sizes": [640, 750, 828, 1080, 1200, 1920],
-    "formats": ["image/webp", "image/avif"],
-    "minimumCacheTTL": 31536000
-  }
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/client/$1"
+    }
+  ]
 }
